--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -292,7 +292,9 @@
                   </div>
                 </div>
                 <div class="delete-refresh">
-                  <img src="assets/icons/content/return.svg"  *ngIf="source.extractionType == 'webdomain'"  (click)="recrwal('source',source,$event)" ngbTooltip='Recrawl'>
+                  <img src="assets/icons/refresh-table.svg" *ngIf="source.extractionType == 'webdomain' && statusObj[source.recentStatus].name != 'In Progress' && source.recentStatus !== 'configured'&&source.recentStatus !== 'failed'" ngbTooltip='Recrawl' container="body" (click)="recrwal('source',source,$event)">
+                  <img src="assets/icons/refresh-table.svg" *ngIf="source.extractionType == 'webdomain' && source.recentStatus == 'configured'||source.recentStatus == 'failed'" [ngbTooltip]='source.recentStatus==="failed"?"Validate":"Crawl"' container="body" (click)="jobOndemand(source,$event)">
+                  <img src="assets/icons/content/stop.svg" *ngIf="statusObj[source.recentStatus].name == 'In Progress'" ngbTooltip='Stop' container="body" (click)="stopCrwaling(source,$event)"> 
                   <img src="assets/icons/content/delete.svg" (click)="deletePages('source',source,$event)" ngbTooltip='Delete'>
                 </div>
               </div>
