Status Docker moved to header - Top Navigation

--- a/findly-builder/src/app/app.component.scss
+++ b/findly-builder/src/app/app.component.scss
@@ -36,6 +36,18 @@
     .myappname{
         visibility: hidden;
     }
+    .no-landing-screen{
+        visibility: hidden;
+    }
+    .app-dropdown{
+        visibility: hidden;
+    }
+    .test-button{
+        visibility: hidden;
+    }
+    .notification-dropdown{
+        visibility: hidden;
+    }
     &.appSelected{
         .trainBlock{
             display: block !important;
@@ -57,6 +69,21 @@
         }
         .autoSearchTools{
             display: list-item;
+        }
+        .landing-screen{
+            display: none;
+        }
+        .no-landing-screen{
+            visibility: visible !important;
+        }
+        .app-dropdown{
+            visibility: visible !important;
+        }
+        .test-button{
+            visibility: visible !important;
+        }
+        .notification-dropdown{
+            visibility: visible !important;
         }
     }
 }
