--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -533,3 +533,114 @@
     top: 12px;
     cursor: pointer;
 }
+
+.statusDockerLoadingSpinner{
+    background: transparent;
+    width: 223px;
+    height: 40px;
+    padding-top: 10px;
+    border-radius: 4px;
+    opacity: 0.95;
+    padding-left: 7% !important;
+}
+
+.statusDockerBody{
+    .clear_icon{
+        // padding: 15px 17px;
+        padding: 10px 17px;
+        color: #9AA0A6;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 15px;
+        // margin-bottom: 10px;
+        cursor: pointer;
+    }
+    .docker-list{
+        padding: 0 17px;
+        padding-bottom: 10px;
+        .row-content{
+            margin-bottom: 12px;
+            .heading{
+                color: #202124;
+                font-weight: normal;
+                font-size: 12px;
+                line-height: 15px;
+                margin-bottom: 6px;
+            }
+            .desc{
+                color: #9AA0A6;
+                font-weight: normal;
+                font-size: 10px;
+                line-height: 12px;
+                .tooltip-data{
+                    display: none;
+                    cursor: pointer;
+                    margin-left: 4px;
+                    img{
+                        height: 11px;
+                    }
+                }
+            }
+            .task_content{
+                &:hover{
+                    .desc{
+                        .tooltip-data{
+                            display: inline;
+                        }
+                    }
+                }
+            }
+            .img-block{
+                margin-right: 24px;
+                img{
+                    cursor: pointer;
+                }
+            }
+            .status-blcok{
+                img{
+                    cursor: pointer;
+                }
+            }
+        }
+    }    
+    .perfect-scroll-modal-body{
+        &.docker{
+            // height: 215px;
+            height: 428px;
+        }        
+    }
+    .inProgress{
+        width: 20px;
+        height: 20px;
+        -webkit-animation:spin 4s linear infinite;
+        -moz-animation:spin 4s linear infinite;
+        animation:spin 4s linear infinite;
+    }
+    .run-percentageDone {
+        position: absolute;
+        // left: 69px;
+        // top: 2px;
+        left: 55px;
+        top: 7px;
+        font-size: 10px;
+        color: #a6bdda;
+    }
+    .anchor {
+        cursor: pointer;
+    }
+    .clear_icon.disabled{
+        pointer-events: none;
+        opacity: 0.5;
+    }
+}
+
+.inProgress.notification-icon{
+    width: 12px;
+    height: 12px;
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+    position: absolute;
+    top: 16px;
+    left: 16px;
+}
